# cpp_lab3

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  C2MakeLists.txt  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  appp1.cpp  appp1.vcxproj  appp1.vcxproj.filters  cmake_install.cmake  hello_test.cc  lab2.sln  lab2.vcxproj  lab2.vcxproj.filters
Debug/: appp1.exe.recipe  appp1.ilk  vc142.idb
Debug/appp1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  appp1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lab2.dir/Debug/: lab2.exe.recipe
lab2.dir/Debug/lab2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  lab2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lib/Debug/: gtest_main.lib
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
